blogCard: fix alignment

--- a/apps/www/app/_components/blog-card/blog-card.module.css
+++ b/apps/www/app/_components/blog-card/blog-card.module.css
@@ -39,6 +39,7 @@
   display: flex;
   gap: 10px;
   color: var(--ds-color-neutral-text-subtle);
+  align-items: center;
 }
 
 .metaSquare {
